[package]
name = "rust_todo"
version = "0.1.0"
authors = ["pegasis <admin@pegasis.site>"]
edition = "2018"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde = "1.0.115"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
weak-table = "0.3.0"
env_logger = "0.7"
log = "0.4.11"
json = "0.12.4"
actix-cors = "0.2.0"
